# cppbackend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  logger.h  main.cpp  result.h
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/src/: boost_json.cpp  http_server.cpp  http_server.h  json_handler.cpp  json_handler.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h  responce_handler.cpp  responce_handler.h  sdk.h
sprint1/problems/map_json/solution/: CMakeLists.txt  conanfile.txt
sprint1/problems/map_json/solution/src/: json_handler.cpp  json_handler.h  request_handler.h  responce_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/final_task/src/: main.cpp
sprint2/problems/final_task/src/application/: application.cpp  application.h  game_session.cpp  game_session.h  player.cpp  player.h
sprint2/problems/final_task/src/auth/: tokens.cpp  tokens.h
sprint2/problems/final_task/src/command/: command.cpp  command.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  main.cpp
sprint2/problems/server_logging/solution/src/file_system/: file_system.cpp
sprint2/problems/server_logging/solution/src/json/: json_handler.cpp  json_handler.h  json_loader.cpp
sprint2/problems/server_logging/solution/src/logger/: logging_handler.h
sprint2/problems/server_logging/solution/src/model/: model.cpp  model.h
sprint2/problems/server_logging/solution/src/responce/: responce_handler.cpp  responce_handler.h  static_file_handler.h
sprint2/problems/server_logging/solution/src/server/: http_server.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/application/: application.cpp  application.h
sprint2/problems/time_control/solution/src/json/: json_handler.cpp  json_handler.h  json_loader.cpp
sprint2/problems/time_control/solution/src/model/: constdef.h  game.cpp  game_session.cpp  game_session.h  god.cpp  god.h  map.cpp  map.h  player.cpp  player.h  road.h  road_layout.cpp  road_layout.h  typedef.h
sprint2/problems/time_control/solution/src/request/: api_request_handler.h  api_request_handler_proxy.h  static_file_request_handler.h
sprint3/problems/final_task/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  PostgresSQL.cpp  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+161 files in other folders)
